@@ -13,6 +13,7 @@
 	- python: return ds, not tuple, for ds iteration.
 	- python: permit integer keys to ts.dbMatch().
 	- xml: use <foo/> markup for empty tags.
+	- xml: <integer/> instead of <integer>0</integer> markup.
 
 4.3 -> 4.3.1:
 	- fix: don't add leading space to %* argv expansion (#119059).
